--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,8 @@
 name: Build LaTeX document
-on: [ push, workflow_dispatch ]
+on:
+  push:
+    branches:
+      - main
 jobs:
   build_latex:
     runs-on: ubuntu-latest
